--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
+
 body{
 	background-color: darksalmon;
-	font-family: 'Verdana', 'Arial', sans-serif;
+	font-family: 'Times New Roman', 'Georgia', serif;
 }
 
 h1{
@@ -12,7 +13,6 @@ h1, h2{
 	text-decoration: underline;
 }
 
-
 a{
 	display: block;
 	width: 300px;
@@ -22,7 +22,7 @@ a{
 	background-color: orangered;
 	color: white;
 	border: 1px dotted black;
-	margin: 0 auto;
+
 }
 
 img{
@@ -37,6 +37,10 @@ img{
 	background-color: lightblue;
 }
 
+
+.menu a{
+	margin: 0 auto;
+}
 
 .menu li{
 	list-style-type: none;
